[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/gameboy_20.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/gameboy_60.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/FinalDialog.gd" type="Script" id=3]

[node name="FinalDialog" type="CanvasLayer"]
layer = 7
script = ExtResource( 3 )

[node name="Overlay" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.67451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="CenterContainer" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="Overlay/Container"]
margin_left = 272.0
margin_top = 188.0
margin_right = 752.0
margin_bottom = 412.0

[node name="FinishedLabel" type="Label" parent="Overlay/Container/Options"]
margin_right = 480.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "Finished"

[node name="PositionLabel" type="Label" parent="Overlay/Container/Options"]
margin_top = 79.0
margin_right = 480.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 2 )
text = "pos: 2"
align = 1

[node name="RestartButton" type="Button" parent="Overlay/Container/Options"]
margin_top = 158.0
margin_right = 480.0
margin_bottom = 189.0
custom_fonts/font = ExtResource( 1 )
text = "Restart"

[node name="MenuButton" type="Button" parent="Overlay/Container/Options"]
margin_top = 193.0
margin_right = 480.0
margin_bottom = 224.0
custom_fonts/font = ExtResource( 1 )
text = "Main menu"
[connection signal="pressed" from="Overlay/Container/Options/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Overlay/Container/Options/MenuButton" to="." method="_on_MenuButton_pressed"]
